<resources>

    <!-- Calculator's Resources -->
    <string name="app_name">Calculadora</string>

    <!-- Standart Calculator Buttons -->
    <string name="deletar_expressao">AC</string>
    <string name="abre_parentese">(</string>
    <string name="fecha_parentese">)</string>
    <string name="zero">0</string>
    <string name="um">1</string>
    <string name="dois">2</string>
    <string name="tres">3</string>
    <string name="quatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="sete">7</string>
    <string name="oito">8</string>
    <string name="nove">9</string>
    <string name="soma">+</string>
    <string name="subtracao">-</string>
    <string name="division">÷</string>
    <string name="multiplicacao">×</string>
    <string name="porcentagem">%</string>
    <string name="separador">,</string>
    <string name="copy">copy</string>

    <!-- Expensive Buttons   -->
    <string name="euler">e</string>
    <string name="fatorial">!</string>
    <string name="raizQuadrada">√</string>
    <string name="pi">π</string>
    <string name="log">log</string>
    <string name="sen">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="expoente">^</string>
    <string name="backspace">backspace</string>
    <string name="eqauals">eqauals</string>

    <!--  Menu strings  -->
    <string name="aiFunction">aiFunction</string>
    <string name="lengthConversion">lengthConversion</string>
    <string name="imcConversion">imcConversion</string>
    <string name="weightConversion">weightConversion</string>
    <string name="potencyConversion">powConversion</string>
    <string name="pressureConversion">pressureConversion</string>
    <string name="temperatureConversion">temperatureConversion</string>
    <string name="distanceTime">distanceTime</string>

</resources>