<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/conent_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_gravity="bottom"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:maxHeight="700dp"
        app:columnCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:rowCount="6">

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/button1"
            style="@style/EspecialButtonStyle"
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/abre_parentese"
            app:layout_column="0"
            app:layout_row="0" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/button2"
            style="@style/NumberButtonStyle"
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/sete"
            app:layout_column="0"
            app:layout_row="1" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/button3"
            style="@style/NumberButtonStyle"
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/quatro"
            app:layout_column="0"
            app:layout_row="2" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/button4"
            style="@style/NumberButtonStyle"
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/um"
            app:layout_column="0"
            app:layout_row="3" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/button5"
            style="@style/EspecialButtonStyle"
            android:layout_margin="5dp"
            android:onClick="expressionClear"
            android:text="@string/deletar_expressao"
            app:layout_column="0"
            app:layout_row="4" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/button6"
            style="@style/EspecialButtonStyle"
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/fecha_parentese"
            app:layout_column="1"
            app:layout_row="0" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/button7"
            style="@style/NumberButtonStyle"
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/oito"
            app:layout_column="1"
            app:layout_row="1" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/button8"
            style="@style/NumberButtonStyle"
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/cinco"
            app:layout_column="1"
            app:layout_row="2" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/button9"
            style="@style/NumberButtonStyle"
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/dois"
            app:layout_column="1"
            app:layout_row="3" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/button10"
            style="@style/NumberButtonStyle"
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/zero"
            app:layout_column="1"
            app:layout_row="4" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/button11"
            style="@style/EspecialButtonStyle"
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/porcentagem"
            app:layout_column="0"
            app:layout_row="5" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/button12"
            style="@style/NumberButtonStyle"
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/nove"
            app:layout_column="2"
            app:layout_row="1" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/button13"
            style="@style/NumberButtonStyle"
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/seis"
            app:layout_column="2"
            app:layout_row="2" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/button14"
            style="@style/NumberButtonStyle"
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/tres"
            app:layout_column="2"
            app:layout_row="3" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/button15"
            style="@style/EspecialButtonStyle"
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/separador"
            app:layout_column="2"
            app:layout_row="4" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/button16"
            style="@style/EspecialButtonStyle"
            android:layout_margin="5dp"
            android:onClick="excludeCharacter"
            android:text="@string/deletar_caractere"
            app:layout_column="3"
            app:layout_row="0" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/button17"
            style="@style/EspecialButtonStyle"
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/divisao"
            app:layout_column="2"
            app:layout_row="0" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/button18"
            style="@style/EspecialButtonStyle"
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/multiplicacao"
            app:layout_column="3"
            app:layout_row="1" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/button19"
            style="@style/EspecialButtonStyle"
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/subtracao"
            app:layout_column="3"
            app:layout_row="2" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/button20"
            style="@style/EspecialButtonStyle"
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/soma"
            app:layout_column="3"
            app:layout_row="3" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/button21"
            style="@style/EspecialButtonStyle"
            android:layout_margin="5dp"
            android:onClick="equalsResult"
            android:text="@string/resultado"
            app:layout_column="3"
            app:layout_row="4" />

    </androidx.gridlayout.widget.GridLayout>

</LinearLayout>