<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/keyboard_viewPager"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/primary">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayoutExp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:maxHeight="700dp"
        app:columnCount="6"
        app:layout_constraintBottom_toTopOf="@+id/buttons"
        app:rowCount="7">

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/buttonTanExp"
            style="@style/ViewPagerButtonsEspecial"
            android:layout_margin="5dp"
            android:contentDescription="@string/tan"
            android:text="@string/tan"
            android:textSize="29sp"
            app:layout_column="3"
            app:layout_row="0" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/buttonCosExp"
            style="@style/ViewPagerButtonsEspecial"
            android:layout_margin="5dp"
            android:contentDescription="@string/cos"
            android:text="@string/cos"
            android:textSize="29sp"
            app:layout_column="2"
            app:layout_row="0" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/buttonSenExp"
            style="@style/ViewPagerButtonsEspecial"
            android:layout_margin="5dp"
            android:contentDescription="@string/sen"
            android:text="@string/sen"
            android:textSize="29sp"
            app:layout_column="1"
            app:layout_row="0" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/buttonLogExp"
            style="@style/ViewPagerButtonsEspecial"
            android:layout_margin="5dp"
            android:contentDescription="@string/log"
            android:text="@string/log"
            android:textSize="29sp"
            app:layout_column="0"
            app:layout_row="0" />

        <ImageButton
            android:id="@+id/buttonExpoenteExp"
            style="@style/ViewPagerButtonsEspecial"
            android:layout_width="68dp"
            android:layout_height="59dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/expoente"
            android:importantForAccessibility="no"
            android:padding="16dp"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_expoent_1024px"
            app:layout_column="0"
            app:layout_row="1" />

        <ImageButton
            android:id="@+id/buttonFactorialExp"
            style="@style/ViewPagerButtonsEspecial"
            android:layout_width="68dp"
            android:layout_height="59dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/fatorial"
            android:importantForAccessibility="no"
            android:padding="16dp"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_factorial_1024px"
            app:layout_column="0"
            app:layout_row="2" />


        <ImageButton
            android:id="@+id/buttonRaizQuadradaExp"
            style="@style/ViewPagerButtonsEspecial"
            android:layout_width="68dp"
            android:layout_height="59dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/raizQuadrada"
            android:importantForAccessibility="no"
            android:padding="12dp"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_square_root_1024px"
            app:layout_column="0"
            app:layout_row="3" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/buttonEulerExp"
            style="@style/ViewPagerButtonsEspecial"
            android:layout_margin="5dp"
            android:contentDescription="@string/euler"
            android:text="@string/euler"
            android:gravity="center"
            android:textSize="38sp"
            app:layout_column="0"
            app:layout_row="4" />

        <ImageButton
            android:id="@+id/buttonPiExp"
            style="@style/ViewPagerButtonsEspecial"
            android:layout_width="68dp"
            android:layout_height="59dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/pi"
            android:importantForAccessibility="no"
            android:padding="12dp"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_pi_1024px"
            app:layout_column="0"
            app:layout_row="5" />

        <ImageButton
            android:id="@+id/buttonOpenParenthesisExp"
            style="@style/ViewPagerButtonsEspecial"
            android:layout_width="68dp"
            android:layout_height="59dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/abre_parentese"
            android:importantForAccessibility="no"
            android:padding="15dp"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_open_parenthesis_1024px"
            app:layout_column="2"
            app:layout_row="1" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/buttonSevenExp"
            style="@style/ViewPagerButtonsDefault"
            android:layout_margin="5dp"
            android:contentDescription="@string/sete"
            android:text="@string/sete"
            app:layout_column="1"
            app:layout_row="2" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/buttonFourExp"
            style="@style/ViewPagerButtonsDefault"
            android:layout_margin="5dp"
            android:contentDescription="@string/quatro"
            android:text="@string/quatro"
            app:layout_column="1"
            app:layout_row="3" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/buttonOneExp"
            style="@style/ViewPagerButtonsDefault"
            android:layout_margin="5dp"
            android:contentDescription="@string/um"
            android:text="@string/um"
            app:layout_column="1"
            app:layout_row="4" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/buttonClearAllExp"
            style="@style/ViewPagerButtonsEspecial"
            android:layout_margin="5dp"
            android:contentDescription="@string/deletar_expressao"
            android:text="@string/deletar_expressao"
            app:layout_column="1"
            app:layout_row="5" />

        <ImageButton
            android:id="@+id/buttonCloseParenthesisExp"
            style="@style/ViewPagerButtonsEspecial"
            android:layout_width="68dp"
            android:layout_height="59dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/fecha_parentese"
            android:importantForAccessibility="no"
            android:padding="15dp"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_close_parenthesis_1024px"
            app:layout_column="3"
            app:layout_row="1" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/buttonEightExp"
            style="@style/ViewPagerButtonsDefault"
            android:layout_margin="5dp"
            android:contentDescription="@string/oito"
            android:text="@string/oito"
            app:layout_column="2"
            app:layout_row="2" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/buttonFiveExp"
            style="@style/ViewPagerButtonsDefault"
            android:layout_margin="5dp"
            android:contentDescription="@string/cinco"
            android:text="@string/cinco"
            app:layout_column="2"
            app:layout_row="3" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/buttonTwoExp"
            style="@style/ViewPagerButtonsDefault"
            android:layout_margin="5dp"
            android:contentDescription="@string/dois"
            android:text="@string/dois"
            app:layout_column="2"
            app:layout_row="4" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/buttonZeroExp"
            style="@style/ViewPagerButtonsDefault"
            android:layout_margin="5dp"
            android:contentDescription="@string/zero"
            android:text="@string/zero"
            app:layout_column="2"
            app:layout_row="5" />

        <ImageButton
            android:id="@+id/buttonPercentExp"
            style="@style/ViewPagerButtonsEspecial"
            android:layout_width="68dp"
            android:layout_height="59dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/porcentagem"
            android:importantForAccessibility="no"
            android:padding="15dp"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_percent_1024px"
            app:layout_column="1"
            app:layout_row="1" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/buttonNineExp"
            style="@style/ViewPagerButtonsDefault"
            android:layout_margin="5dp"
            android:contentDescription="@string/nove"
            android:text="@string/nove"
            app:layout_column="3"
            app:layout_row="2" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/buttonSixExp"
            style="@style/ViewPagerButtonsDefault"
            android:layout_margin="5dp"
            android:contentDescription="@string/seis"
            android:text="@string/seis"
            app:layout_column="3"
            app:layout_row="3" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/buttonThreeExp"
            style="@style/ViewPagerButtonsDefault"
            android:layout_margin="5dp"
            android:contentDescription="@string/tres"
            android:text="@string/tres"
            app:layout_column="3"
            app:layout_row="4" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/buttonSeparatorExp"
            style="@style/ViewPagerButtonsEspecial"
            android:layout_margin="5dp"
            android:contentDescription="@string/separador"
            android:text="@string/separador"
            app:layout_column="3"
            app:layout_row="5" />

        <ImageButton
            android:id="@+id/buttonBackSpaceExp"
            style="@style/ViewPagerButtonsEspecial"
            android:layout_width="68dp"
            android:layout_height="59dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/backspace"
            android:importantForAccessibility="no"
            android:padding="12dp"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_backspace_1024px"
            app:layout_column="4"
            app:layout_row="0" />

        <ImageButton
            android:id="@+id/buttonDivisionExp"
            style="@style/ViewPagerButtonsEspecial"
            android:layout_width="68dp"
            android:layout_height="59dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/division"
            android:importantForAccessibility="no"
            android:padding="16dp"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_division_512px"
            app:layout_column="4"
            app:layout_row="1" />

        <ImageButton
            android:id="@+id/buttonMultiplicationExp"
            style="@style/ViewPagerButtonsEspecial"
            android:layout_width="68dp"
            android:layout_height="59dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/multiplicacao"
            android:importantForAccessibility="no"
            android:padding="18dp"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_mulitply_512px"
            app:layout_column="4"
            app:layout_row="2" />

        <ImageButton
            android:id="@+id/buttonSubtractionExp"
            style="@style/ViewPagerButtonsEspecial"
            android:layout_width="68dp"
            android:layout_height="59dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/subtracao"
            android:importantForAccessibility="no"
            android:paddingHorizontal="18dp"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_subtraction_512px"
            app:layout_column="4"
            app:layout_row="3" />

        <ImageButton
            android:id="@+id/buttonSumExp"
            style="@style/ViewPagerButtonsEspecial"
            android:layout_width="68dp"
            android:layout_height="59dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/soma"
            android:importantForAccessibility="no"
            android:padding="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_sum_1024px"
            app:layout_column="4"
            app:layout_row="4" />

        <ImageButton
            android:id="@+id/buttonEqualsExp"
            style="@style/ViewPagerButtonsEspecial"
            android:layout_width="68dp"
            android:layout_height="59dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/eqauals"
            android:importantForAccessibility="no"
            android:padding="16dp"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_equals_1024px"
            app:layout_column="4"
            app:layout_row="5" />

    </androidx.gridlayout.widget.GridLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/buttonUpExp"
            style="@style/ViewPagerButtonsEspecial"
            android:layout_width="186dp"
            android:layout_margin="5dp"
            android:importantForAccessibility="no"
            android:padding="9dp"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_up" />

        <ImageButton
            android:id="@+id/buttonDownExp"
            style="@style/ViewPagerButtonsEspecial"
            android:layout_width="186dp"
            android:layout_margin="5dp"
            android:importantForAccessibility="no"
            android:padding="9dp"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_down" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>