<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/primary"
    android:orientation="vertical">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:maxHeight="700dp"
        app:columnCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rowCount="5">

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/buttonSeven"
            style="@style/ConfigurationDefaultButton"
            android:layout_margin="5dp"
            android:contentDescription="@string/sete"
            android:text="@string/sete"
            app:layout_column="0"
            app:layout_row="0" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/buttonFour"
            style="@style/ConfigurationDefaultButton"
            android:layout_margin="5dp"
            android:contentDescription="@string/quatro"
            android:text="@string/quatro"
            app:layout_column="0"
            app:layout_row="1" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/buttonOne"
            style="@style/ConfigurationDefaultButton"
            android:layout_margin="5dp"
            android:contentDescription="@string/um"
            android:text="@string/um"
            app:layout_column="0"
            app:layout_row="2" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/buttonClearAll"
            style="@style/ConfigurationDefaultButton"
            android:layout_margin="5dp"
            android:text="@string/deletar_expressao"
            android:textSize="25sp"
            app:layout_column="0"
            app:layout_row="3" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/buttonEight"
            style="@style/ConfigurationDefaultButton"
            android:layout_margin="5dp"
            android:text="@string/oito"
            android:textSize="25sp"
            app:layout_column="1"
            app:layout_row="0" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/buttonFive"
            style="@style/ConfigurationDefaultButton"
            android:layout_margin="5dp"
            android:text="@string/cinco"
            android:textSize="25sp"
            app:layout_column="1"
            app:layout_row="1" />


        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/buttonTwo"
            style="@style/ConfigurationDefaultButton"
            android:layout_margin="5dp"
            android:contentDescription="@string/dois"
            android:text="@string/dois"
            app:layout_column="1"
            app:layout_row="2" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/buttonZero"
            style="@style/ConfigurationDefaultButton"
            android:layout_margin="5dp"
            android:contentDescription="@string/zero"
            android:text="@string/zero"
            app:layout_column="1"
            app:layout_row="3" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/buttonNine"
            style="@style/ConfigurationDefaultButton"
            android:layout_margin="5dp"
            android:contentDescription="@string/nove"
            android:text="@string/nove"
            app:layout_column="2"
            app:layout_row="0" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/buttonSix"
            style="@style/ConfigurationDefaultButton"
            android:layout_margin="5dp"
            android:contentDescription="@string/seis"
            android:text="@string/seis"
            app:layout_column="2"
            app:layout_row="1" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/buttonThree"
            style="@style/ConfigurationDefaultButton"
            android:layout_margin="5dp"
            android:clickable="true"
            android:contentDescription="@string/tres"
            android:text="@string/tres"
            app:layout_column="2"
            app:layout_row="2" />

        <com.devmobile.android.calculadora.model.BackgroundButtonView
            android:id="@+id/buttonSeparator"
            style="@style/EspecialButtonStyle"
            android:layout_margin="5dp"
            android:contentDescription="@string/separador"
            android:text="@string/separador"
            app:layout_column="2"
            app:layout_row="3" />

        <ImageButton
            android:id="@+id/buttonBackSpace"
            style="@style/EspecialButtonStyle"
            android:layout_width="88dp"
            android:layout_height="73dp"
            android:layout_margin="5dp"
            android:importantForAccessibility="no"
            android:padding="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_backspace_1024px"
            app:layout_column="2"
            app:layout_row="4" />

        <ImageButton
            android:id="@+id/buttonMenu"
            style="@style/EspecialButtonStyle"
            android:layout_width="88dp"
            android:layout_height="73dp"
            android:layout_margin="5dp"
            android:importantForAccessibility="no"
            android:padding="22dp"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_menu_1024px"
            app:layout_column="0"
            app:layout_row="4" />
    </androidx.gridlayout.widget.GridLayout>

</LinearLayout>